  * Corrected several typos in names (Quesenberry, Jeffreys). 
    (Credit to musvaage in https://github.com/AndriSignorell/DescTools/pull/169)
  * ICC() no longer fails when "type" argument is set to anything other 
    than "all". (Credit to Alphonse Kwizera)
  * PercentRank() now subtracts 1 in nominator and denominator ensuring
    the scale runs from 0 to 1.  




DescTools 0.99.60 (2025-03-28)
------------------------------

NEW FUNCTIONS ADDED:
  * Downloads() helperfunction for a fast access to downloaded 
    XL- or data files.
  * Moment functions for the most common distributions.

UPDATED FUNCTIONS:
  * FisherZ() and FisherZInv() use atanh(), resp. tanh() now.
    (Credits to Daniel Wollschlaeger)
  * Year(), Week(), YearWeek() have been recoded in C++ and now run 
    4-10 times faster.
  * Format() gets two new predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%".
  * Small improvement in Outlier() for method "hampel"  
    (Credits to Luis Gustavo Schuck).




DescTools 0.99.59 (2025-01-26)
------------------------------

NEW FUNCTIONS ADDED:
  * SumCI() returns the confidence interval of the sum of multiple variables
    with given confidence intervals.
  * CutGen() yields the generation category based on year of birth. 

UPDATED FUNCTIONS:
  * BrierScoreCI() now supports "scaled" argument.
  * KendallW() has been updated to better support missing values.
  * TMod() and print.TMod() gain a new "verb" argument to restrict
    the number of performance indicators in the output.

BUGFIXES:
  * CountCompCases() accepts data.tables and list columns in data.frames.
  * MultinomCI() did not return the full accuracy in the method of Sison Glaz. 




DescTools 0.99.58 (2024-11-10)
------------------------------

NEW FUNCTIONS ADDED:
  * ReadSPSS() converts SPSS data in a data.frame.
  * AppendRowNames() shortcut to append rownames as a new column
    to a data.frame.

UPDATED FUNCTIONS:
  * CourseData() finds more files now.
