@@ -1,8 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.60.12
-Date: 2025-07-15
+Version: 0.99.60.13
+Date: 2025-08-01
 Authors@R: c(
   person(given="Andri", family="Signorell", 
          email = "andri@signorell.net", 
