@@ -34,7 +34,12 @@ BUGFIXES:
     than "all". (Credit to Alphonse Kwizera)
   * PercentRank() now subtracts 1 in nominator and denominator ensuring
     the scale runs from 0 to 1.  
-
+  * ToLong() does not try to replace non existing rownames anymore. 
+  * SiegelTukeyRank() works numerically more robust (Credits to speegled, 
+      https://github.com/AndriSignorell/DescTools/issues/171 )
+  * CCC() yields the same classes of results independently of the definition of
+    na.rm. (Credits go to abichat, 
+      https://github.com/AndriSignorell/DescTools/issues/172)
 
 
 
